--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://julio1230.github.io/hotDogsHotterWings/",
   "name": "hotdogshotterwings",
   "private": true,
   "version": "0.0.0",
