--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://julio1230.github.io/hotDogsHotterWings/",
+  "homepage": ".",
   "name": "hotdogshotterwings",
   "private": true,
   "version": "0.0.0",
