--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "homepage": ".",
   "name": "hotdogshotterwings",
+  "homepage": "https://julio1230.github.io/hotDogsHotterWings/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "nom run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.2.3",
     "@emotion/react": "^11.14.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "gh-pages": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.3"
