--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hotdogshotterwings",
-  "homepage": "https://julio1230.github.io/hotDogsHotterWings/",
+  "homepage": "hotdogshotterwings.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
